--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,18 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:100');
+
+#completed {
+  text-align: center;
+  color: teal;
+  font-family: 'Roboto', sans-serif;
+}
+
+#title {
+  font-size: 50px;
+  text-align: center;
+  color: teal;
+  font-family: 'Roboto', sans-serif;
+}
